HAWKULAR-70: Setup page enchancements

--- a/plugins/metrics/plugins/metrics/less/metrics-main.less
+++ b/plugins/metrics/plugins/metrics/less/metrics-main.less
@@ -1005,3 +1005,16 @@ p.info-top {
     background-color: #e5e5e5;
     color: #9d9fa1;
 }
+
+// Bootstrap select quick&dirty workaround
+#main .input-group-btn {
+  width: auto;
+}
+
+#main .bootstrap-select > .btn {
+  width: 135%;
+}
+
+#main .form-horizontal .inline-row .duration {
+  margin-right: 35px;
+}
