--- a/plugins/metrics/plugins/metrics/less/metrics-main.less
+++ b/plugins/metrics/plugins/metrics/less/metrics-main.less
@@ -148,7 +148,7 @@ h2 {
   }
 }
 
-.ng-dirty { 
+.ng-dirty {
   .help-block {
     color: @brand-danger;
   }
@@ -379,7 +379,7 @@ h2 {
 
 .form-horizontal.add-url {
   margin-bottom: @grid-gutter-width;
-  
+
   .input-group-btn {
     vertical-align: top;
   }
@@ -388,11 +388,11 @@ h2 {
 .urls-list-labels {
   color: @gray-light;
   margin-bottom: 5px;
-  
+
   .text-left {
     padding-left: @grid-gutter-width;
   }
-  
+
   .btn-link {
     color: @gray-light;
   }
@@ -412,7 +412,7 @@ h2 {
 }
 
 .url-info {
-  
+
   .summary-item {
     border-right-color: transparent;
     position: relative;
@@ -420,8 +420,8 @@ h2 {
     &:first-child {
       padding-left: @grid-gutter-width/4*5;
       text-align: left;
-    }      
-    
+    }
+
     .btn-link.trigger {
       color: @gray-dark;
       display: block;
@@ -430,57 +430,57 @@ h2 {
       .fa {
         font-size: 14px;
       }
-      
+
       &.activated {
         font-weight: bold;
       }
     }
 
   }
-  
+
   .url-link {
     display: inline-block;
     font-size: 16px;
     margin-bottom: 3px;
     margin-top: 3px;
-    
+
     .fa-flag {
       color: @brand-danger;
       font-size: 18px;
       margin-left: @grid-gutter-width/4;
     }
   }
-  
+
   .delete {
     margin-bottom: 3px;
     visibility: hidden;
-    
+
     .fa {
       font-size: 16px;
     }
   }
-  
+
   &:hover .delete {
     visibility: visible;
   }
-  
+
   .time {
     position: absolute;
     right: @grid-gutter-width/4*5;
     top: -8px;
-    
+
     .fa {
       color: @gray-light;
       font-size: 16px;
       margin-right: 5px;
     }
   }
-  
+
   .data .fa {
     font-size: inherit;
     margin-right: @grid-gutter-width/4;
   }
-  
+
 }
 
 hr.panel-expanded {
@@ -492,39 +492,39 @@ hr.panel-expanded {
   color: @gray;
   padding-bottom: @grid-gutter-width/2;
   padding-top: @grid-gutter-width/4*1.5;
-  
+
   .summary-item {
     border-right-color: @table-border-color;
     padding-top: 0;
-    
+
     .alert-status li {
       background-color: @danger-bg;
       margin-bottom: @grid-gutter-width/4;
       padding: 3px 8px;
     }
-    
+
     span.no-alerts {
       display: block;
       text-align: center;
     }
-    
+
     .alerts-link {
       display: block;
       margin-top: 26px;
       text-align: center;
     }
   }
-  
+
   .top-area {
     height: 40px;
     margin-bottom: @grid-gutter-width/4;
-    
+
     .data {
       line-height: 40px;
       font-size: 20px;
     }
   }
-  
+
   .time {
     top: -28px;
   }
@@ -534,7 +534,7 @@ hr.panel-expanded {
 
 .sc-url section {
   margin-bottom: 45px;
-  
+
   h1 {
     margin-bottom: @grid-gutter-width/2;
     margin-top: -132px;
@@ -555,11 +555,11 @@ hr.panel-expanded {
   border-right: 1px solid @table-border-color;
   display: inline-block;
   padding: 0 @grid-gutter-width/4*3;
-  
+
   &:last-child {
     border-right: none;
   }
-  
+
   &.text-left {
     padding-left: @grid-gutter-width/4*5;
   }
@@ -569,12 +569,12 @@ hr.panel-expanded {
     font-size: 24px;
     font-weight: 100;
     line-height: 1.3;
-    
+
     span {
       font-size: 0.75em;
     }
   }
-  
+
   .item {
     color: @gray;
     display: block;
@@ -585,37 +585,37 @@ hr.panel-expanded {
 .graph {
   padding: @grid-gutter-width/2*1.5;
   text-align: center;
-  
+
   .legend {
     font-size: 11px;
-    
+
     span {
       margin-right: @grid-gutter-width/2;
     }
-    
+
     .fa {
       font-size: 7px;
       margin-right: 5px;
       vertical-align: middle;
-      
+
       &.primary {
         color: @brand-primary;
       }
-      
+
       &.danger {
         color: @brand-danger;
       }
     }
   }
-  
+
   .update {
     font-size: 10px;
-    
+
     a {
       color: @gray-dark;
       cursor: pointer;
     }
-    
+
     .fa {
       color: #74797d;
       font-size: 16px;
@@ -623,26 +623,26 @@ hr.panel-expanded {
       vertical-align: middle;
     }
   }
-  
+
   img {
     margin-top: @grid-gutter-width/4;
   }
 }
 
-// Alerts activity section 
+// Alerts activity section
 
 .nav-tabs > li {
   > a:hover {
     cursor: pointer;
   }
- 
+
   &.active > a,
   &.active > a:active,
   &.active > a:focus,
   &.active > a:hover {
     background-color: @body-bg;
   }
-}  
+}
 
 p.info-top {
   font-size: 13px;
@@ -653,7 +653,7 @@ p.info-top {
 
   &.alert-danger {
     background-color: @danger-bg;
-    
+
     .fa {
       color: @brand-danger;
     }
@@ -662,22 +662,22 @@ p.info-top {
   &.alert {
     font-size: 13px;
     padding: 15px 25px;
-    
+
     > div {
       display: inline-block;
       vertical-align: middle;
     }
-    
+
     .alert-icon {
       text-align: center;
       margin-right: 15px;
       width: 28px;
-      
+
       .fa {
         font-size: 24px;
-      }      
-    } 
-    
+      }
+    }
+
     .date {
       margin-right: 20px;
       min-width: 120px;
@@ -692,56 +692,56 @@ p.info-top {
 }
 
 .form-horizontal {
-    
+
   fieldset {
     margin-bottom: 5px;
     position: relative;
   }
-  
+
   legend {
     color: @gray-light;
     font-size: 15px;
   }
-  
+
   .onffswitch-form-group {
     margin-bottom: 0;
-    
+
     .control-label {
       display: none;
     }
   }
-  
+
   .onoffswitch-container {
     position: absolute;
     right: 0;
     top: -6px;
-    width: 62px;  
+    width: 62px;
   }
-  
+
   label {
     padding-right: 0;
   }
-  
+
   .help-block {
     margin-top: 5px;
   }
-  
+
   .inline-row {
-    
+
     > div,
     > span {
       float: left;
       margin-right: @grid-gutter-width/4;
     }
-    
+
     .between-inputs {
       line-height: 26px;
     }
-    
+
     .time {
       width: 120px;
     }
-    
+
     .duration {
       width: 180px;
     }
@@ -755,11 +755,11 @@ p.info-top {
   height: 26px;
   position: relative;
   width: 62px;
-  
+
   &:focus {
     box-shadow: 0 0 8px rgba(102, 175, 73, 0.6);
   }
-  
+
   .onoffswitch-checkbox {
     display: none;
   }
@@ -772,13 +772,13 @@ p.info-top {
     overflow: hidden;
     width: 62px;
   }
-  
+
   .onoffswitch-inner {
     display: block;
     margin-left: -100%;
     transition: margin 0.3s ease-in 0s;
     width: 200%;
-    
+
     > span {
       -moz-box-sizing: border-box;
       color: white;
@@ -790,13 +790,13 @@ p.info-top {
       padding: 0;
       width: 50%;
     }
-    
+
     .onoffswitch-active {
       background: @brand-primary;
       color: #FFFFFF;
       padding-left: 10px;
     }
-    
+
     .onoffswitch-inactive {
       background: linear-gradient(#fefefe, #e8e8e8) repeat scroll 0 0 transparent;
       color: #4d5258;
@@ -804,7 +804,7 @@ p.info-top {
       text-align: right;
     }
   }
-  
+
   .onoffswitch-switch {
     background-image: linear-gradient(top, #fafafa 0%, #ededed 100%);
     background-image: -o-linear-gradient(top, #fafafa 0%, #ededed 100%);
@@ -848,6 +848,25 @@ p.info-top {
 
 #metrics-chart {
   height: 270px;
+}
+
+.duration {
+  label {
+    font-weight: normal;
+    margin-bottom: 0;
+    input {
+      margin-right: 7px;
+    }
+  }
+  .hk-duration-value {
+
+    display: inline-block;
+    margin-left: 7px;
+
+    .input-group {
+      top: 7px;
+    }
+  }
 }
 
 // Bootstrap select quick&dirty workaround
